--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,21 +3,8 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#000000" 
+    android:background="#FFFFFF" 
     >
-    <TextView  
-    android:textSize="24sp"
-    android:layout_marginTop="5px" 
-    android:layout_width="wrap_content" 
-    android:layout_height="wrap_content" 
-    android:text="droidOpenDataBr 5.1"
-    android:layout_gravity="center_horizontal"
-    />    <TextView  
-    android:layout_width="wrap_content" 
-    android:layout_height="wrap_content" 
-    android:text="Alessandro de Oliveira Faria"
-    android:layout_gravity="center_horizontal"
-    />
     <TextView  
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content" 
@@ -27,7 +14,7 @@
     <TextView  
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content" 
-    android:text="Versão: 0.90 Beta"
+    android:text="Versão: 7.0"
     android:layout_gravity="center_horizontal"
     />
     <Button
